tests/neg-custom-args/captures/lazyvals.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyvals.scala:15:27 -------------------------------------
15 |  val fun2: () -> String = () => x() // error
   |                           ^^^^^^^^^
   |                           Found:    () ->{console} String
   |                           Required: () -> String
   |
   |                           Note that capability `console` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/lazyvals.scala:16:36 -----------------------------------
16 |  val fun3: () ->{x} String = () => x() // error // error
   |                                    ^
   |                                    Reference `console` is not included in the allowed capture set {x}
   |                                    of an enclosing function literal with expected type () ->{x} String.
-- Error: tests/neg-custom-args/captures/lazyvals.scala:16:12 ----------------------------------------------------------
16 |  val fun3: () ->{x} String = () => x() // error // error
   |            ^^^^^^^^^^^^^^^
   |            (x : () -> String) cannot be tracked since its capture set is empty
